Bug 131542 - EMF+ FILEOPEN Some part of image is missing due to lack of BeginContainer implementation
Summary: EMF+ FILEOPEN Some part of image is missing due to lack of BeginContainer imp...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium normal
Assignee: Bartosz
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-24 16:16 UTC by Bartosz
Modified: 2020-05-25 12:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
EMF+ image wth BeginContainer (1016 bytes, image/emf)
2020-03-24 16:16 UTC, Bartosz
Details
EMF+ image wth BeginContainer exported to PNG via Paint (1.76 KB, image/png)
2020-03-24 16:17 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bartosz 2020-03-24 16:16:18 UTC
Description:
Some part of image is missing due to lack of BeginContainer implementation

Steps to Reproduce:
1. Open attached EMF+ image
2.
3.

Actual Results:
Noticed that red ellipse is missing

Expected Results:
Both ellipse are displayed 


Reproducible: Always


User Profile Reset: No



Additional Info:
You could drag and drop EMF+ image into Writer
Comment 1 Bartosz 2020-03-24 16:16:59 UTC
Created attachment 158949 [details]
EMF+ image wth BeginContainer
Comment 2 Bartosz 2020-03-24 16:17:31 UTC
Created attachment 158950 [details]
EMF+ image wth BeginContainer exported to PNG via Paint
Comment 3 Commit Notification 2020-03-24 19:38:52 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/adc7d311de22b0026a5fa0f80f2327d0336fd7cd

tdf#131542 EMF+ Implement BeginContainer record

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.