tdf#131542 EMF+ Implement BeginContainer record

Change-Id: If388ef4544001fb9064aed3ce979c2790ab0645f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90997
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit adc7d311de22b0026a5fa0f80f2327d0336fd7cd)